@@ -27,6 +27,7 @@ v0.7.0, 2019-10-?? -- fall cleaning
    * arguments to CompositeFilesystem constructor
    * MRJobLauncher class
    * the `mrjob run` command
+ * mrjob audit-emr-usage no longer reads pre-v0.6.0 cluster pool names
 
 v0.6.12, 2019-10-23 -- unbreak Google
  * default image_version on Dataproc is now 1.3 (#2110)
